kubernetes/full-stack/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: sorry-cypress-dashboard
        image: agoldis/sorry-cypress-dashboard:latest
        ports:
        - containerPort: 8080
