kubernetes/full-stack/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
